--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
 </head>
 <body>
 <h1>test</h1>
+
+<footer>
+    <p>This site is powered by GitHub Pages - it's repository is <a href=https://github.com/OverseerCave/overseercave.github.io>here.</a></p>
+</footer> 
 </body>
 </html>
