--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 <h1>test</h1>
+<p><marquee scrollamount="30">oh no watch out for the spy!!! </marquee></p>
 <img src="images/spy_loadout.png" alt="A Spy loadout" >
 <footer>
     <p>This site is powered by GitHub Pages - it's repository is <a href=https://github.com/OverseerCave/overseercave.github.io>here.</a></p>
