--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <head>
     <title>The Spy from TF2, no way</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 <h1>test</h1>
