--- a/download/download.htm
+++ b/download/download.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <head>
         <title>A Spy-friendly Download Page</title>
+        <link rel="stylesheet" type="text/css" href="../main.css">
     </head>
     <body>
         <p>There is nothing here yet. Check here later!</p>
