link to download page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 <h1>Page about the Spy in Team Fortress 2</h1>
 <p><marquee scrollamount="50">oh no watch out for the spy!!! </marquee></p>
+<p><a href="/download/download.htm">download page</a></p>
 <img src="images/spy_loadout.png" alt="A Spy loadout" >
 <footer>
     <p>This site is powered by GitHub Pages - it's repository is <a href=https://github.com/OverseerCave/overseercave.github.io>here.</a></p>
