added link to FBI OPEN UP video

--- a/download/download.htm
+++ b/download/download.htm
@@ -4,6 +4,6 @@
         <link rel="stylesheet" type="text/css" href="../main.css">
     </head>
     <body>
-        <p>There is nothing here yet. Check here later!</p>
+        <p><a href="http://dl.spy.tf/oof.mp4">oof.mp4</a></p>
     </body>
 </html>
