--- a/download/download.htm
+++ b/download/download.htm
@@ -4,6 +4,7 @@
         <link rel="stylesheet" type="text/css" href="../main.css">
     </head>
     <body>
-        <p><a href="http://dl.spy.tf/oof.mp4">oof.mp4</a></p>
+        <h1>A Spy-Friendly Download Page</h1>
+        <p><a href="http://dl.spy.tf/oof.mp4">FBI OPEN UP clip</a></p>
     </body>
 </html>
